# MIDIGPT

./: Create_a_dark_melody_for_drum_and_bass_keys.mid  README.md  gpt.py  prompt.txt  pyproject.toml
midi/: Trap Piano 01.mid
modules/: midi_to_txt.py  txt_to_midi.py
