[tool.poetry]
name = "midibot"
version = "0.1.0"
description = ""
authors = ["Pop101 <contact@leibmann.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
musthe = "^1.0.0"
mido = "^1.3.2"
g4f = { git = "https://github.com/xtekky/gpt4free.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
